# github-actions-self-hosted-runner-container

./: .gitignore  README.md
.github/workflows/: build.yml
examples/add_scripts/: Dockerfile
examples/as_base_image/: Dockerfile
examples/side_car/: deploy.yml  kustomization.yml
examples/side_car/secret/: .gitignore  access-token.sample.env
image/debian/: Dockerfile
image/ubuntu/: Dockerfile
operation/: build.py  pyproject.toml  tests.py
scripts/: install_runner.sh  run_runner.sh
scripts/debian/: install_runner_dependency.sh
